fix overflow bug about bg shape

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -2,7 +2,7 @@
     padding: 6rem;
     color: #fff;
     background-color: #314584;
-    overflow-x: hidden !important;
+    overflow: hidden;
 
     .footer-container {
         display: flex;
