--- a/styles/_services.scss
+++ b/styles/_services.scss
@@ -1,6 +1,7 @@
 #services {
     min-height: 90vh;
     position: relative;
+    overflow: hidden;
 
     .services-bg-shape {
         position: absolute;
