--- a/styles/main.scss
+++ b/styles/main.scss
@@ -14,7 +14,7 @@ html {
 body {
     font-family: 'Work Sans', sans-serif;
     background-color: #fff;
-    // overflow-x: hidden !important;
+    overflow-x: hidden;
 }
 
 li {
